Cambio estados de inglés a español + modifico la tipografía por una más legible!

--- a/src/app/components/new-chat/new-chat.html
+++ b/src/app/components/new-chat/new-chat.html
@@ -26,8 +26,8 @@
       <div class="field">
         <label>Estado:</label>
         <select formControlName="status">
-          <option value="online">Online</option>
-          <option value="offline">Offline</option>
+          <option value="conectado">Conectado</option>
+          <option value="desconectado">Desconectado</option>
         </select>
       </div>
 
