--- a/src/styles.css
+++ b/src/styles.css
@@ -1,7 +1,6 @@
-@import url('https://fonts.googleapis.com/css2?family=Cantarell:ital,wght@0,400;0,700;1,400;1,700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Outfit:wght@100..900&display=swap');
 
 * {
-  font-family: "Cantarell", sans-serif;
-  font-weight: 400;
-  font-style: normal;
+  font-family: "Outfit", sans-serif;
+  font-optical-sizing: auto;
 }
